# embedded-python

./: Cargo.toml
src/: another_script.py  chrono_api.py  main.rs  script.py
src/chrono_api/: core.py  script.py  utils.py  wrap_rust_future.py
